fix:Make gap between section lis bigger

--- a/style.css
+++ b/style.css
@@ -39,6 +39,6 @@ ul {
 }
 
 .sections {
-    gap:15px;
+    gap:20px;
     justify-content:center;
 }
